[gd_scene load_steps=2 format=3 uid="uid://b26c1oaxfsqm2"]

[ext_resource type="Script" uid="uid://dsefbfby5gi1p" path="res://Scenes/UI/Ragdoll properties/ragdoll_properties.gd" id="1_cee2f"]

[node name="Ragdoll properties" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_cee2f")

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Ragdoll Properties"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Mass-lab" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Mass(Per Bone)"

[node name="Mass-slider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 200.0
value = 1.0

[node name="Grav-Scale" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Gravity Scale(Per Bone)"

[node name="gravity-scale-slider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -8.0
max_value = 8.0
step = 0.1

[node name="Linear-damp-lab" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Linear Damp(Per Bone)"

[node name="Linear-damp-slider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="Angular-damp-lab" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Angular Damp(Per Bone)"

[node name="Angular-damp-slider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[connection signal="value_changed" from="VBoxContainer/Mass-slider" to="." method="_on_massslider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/gravity-scale-slider" to="." method="_on_gravityscaleslider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Linear-damp-slider" to="." method="_on_lineardampslider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Angular-damp-slider" to="." method="_on_angulardampslider_value_changed"]
